# ble-command-gateway

./: .gitignore  Cargo.toml  README.md  README_EN.md  README_ZH.md  TODO.md  config.py  pyproject.toml  ruff.toml  security.py  sync_to_orin.sh
.codex/: check-maxline.json
.github/workflows/: ci.yml
app/: client_gui_main.py  client_main.py  server_main.py
ble/: __init__.py  response_publisher.py  runtime.py  scan_transport.py  server_gateway.py
client/: __init__.py  app.py  ble_gatt.py  ble_ops.py  ble_scan.py  cli_controller.py  client_config_tool.py  command_client.py  credential_store.py  gateway_result_adapter.py  interactive_flow.py  library_api.py  library_models.py  link_exchange.py  link_test_client.py  models.py  prompting.py  render.py
client/gui/: __init__.py  actions.py  app.py  controller.py  reporting.py  result_panel.py  runtime_checks.py  state.py  task_protocol.py  view.py
commands/: __init__.py  loader.py  registry.py  runtime.py  schemas.py
commands/builtins/: __init__.py  help_cmd.py  net_ifconfig_cmd.py  ping_cmd.py  provision_cmd.py  shutdown_cmd.py  status_cmd.py  whoami_cmd.py  wifi_scan_cmd.py
common/: __init__.py  reporting.py
config/: ble_uuid.py  defaults.py
crates/client/: Cargo.toml
crates/client/macos/: Info.plist
crates/client/src/: ble.rs  ble_tests.rs  cli_text.rs  discovery.rs  interactive.rs  lib.rs  main.rs  request.rs  response.rs  scan_state.rs  session.rs
crates/gui/: Cargo.toml
crates/gui/macos/: Info.plist
crates/gui/src/: app.rs  ble_worker.rs  i18n.rs  main.rs
crates/gui/src/app/: action_tests.rs  action_ui.rs  diagnostic_panel.rs  heartbeat_tests.rs  logs_panel.rs  mod.rs  model.rs  panels.rs  provision_panel.rs  provision_tests.rs  reducer.rs  settings.rs  tests.rs  theme.rs
crates/gui/src/ble_worker/: events.rs  handlers.rs  heartbeat.rs  mod.rs  raw_actions.rs  state.rs  tests.rs
crates/platform_runtime/: Cargo.toml
crates/platform_runtime/src/: lib.rs  macos.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: chunking.rs  lib.rs  requests.rs  responses.rs  tests.rs
crates/server/: Cargo.toml
crates/server/src/: advertising.rs  advertising_backend.rs  bluetoothd.rs  device_identity.rs  device_name.rs  legacy_hci.rs  lib.rs  main.rs  runtime.rs  services.rs
crates/server/src/services/: command_runner.rs  mod.rs  network.rs  system_commands.rs  tests.rs
deploy/systemd/: ble-command-gateway.service  yundrone-ble-command-gateway.service
docs/: COMMANDS.md  COMMAND_AUTHORING.md  LIBRARY_API.md  REFACTOR_GUIDE.md  systemd.md
protocol/: __init__.py  codes.py  command_ids.py  envelope.py  link.py
protocols/: __init__.py  link.py
scripts/: bless_uart.py  package-macos-gui.sh  server_reset.py
server/: link_test_server.py  preflight.py  wifi_ble_service.py
services/: system_exec_service.py  wifi_provisioning_service.py
tests/: ble_live_scan.py
tests/e2e/: ble_live_scan.py
tests/helloworld/: client_link_test.py  server_link_test.py
tests/integration/: client_link_test.py  server_link_test.py
tests/unit/: test_client_library_api.py  test_command_client_reporting.py  test_command_dispatcher.py  test_gateway_result_adapter.py  test_gui_actions.py  test_gui_controller.py  test_gui_heartbeat_state.py  test_gui_reporting.py  test_gui_state.py  test_response_publisher_status.py  test_status_cmd.py  test_system_exec.py  test_uart_protocol.py  test_wifi_credentials_cache.py  test_wifi_provisioning_service.py
tools/: ble_capture_remote.sh  ble_extract_interval_timeline.sh
tools/legacy/: bless_uart_demo.py
tools/reset/: server_reset.py
