[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/client",
    "crates/server",
    "crates/gui"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
