[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ble-command-gateway"
version = "0.1.0"
description = "Provision a Linux server's Wi-Fi over BLE from a cross-platform client, with immediate status feedback"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = []

[project.optional-dependencies]
client = [
    "bleak",
    "inquirerpy",
    "rich",
]
server = [
    "bless==0.3.0",
    "dbus-next",
    "rich",
]
gui = [
    "FreeSimpleGUI",
]

[dependency-groups]
server = [
    "bless==0.3.0",
    "dbus-next",
    "rich",
]
client = [
    "bleak",
    "inquirerpy",
    "rich",
]
gui = [
    "FreeSimpleGUI",
]
build = [
    "nuitka>=4",
]

[tool.uv]
prerelease = "allow"
default-groups = ["server", "client", "build", "gui"]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32' and python_full_version < '3.12'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ble*", "client*", "commands*", "common*", "config*", "protocol*", "server*", "services*"]
