[package]
name = "client"
version = "2026.3.22"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
platform_runtime = { path = "../platform_runtime" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
btleplug = "0.11"
inquire = "0.7"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
serde_json.workspace = true
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
