[package]
name = "gui"
version = "2026.3.22"
edition = "2021"

[dependencies]
client = { path = "../client" }
protocol = { path = "../protocol" }
platform_runtime = { path = "../platform_runtime" }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
eframe = "0.29"
egui = "0.29"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
directories = "5.0"
