[package]
name = "server"
version = "2026.3.22"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio.workspace = true
tokio-stream = "0.1"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = "0.3"
serde_json.workspace = true
