[package]
name = "server"
version = "2026.3.22"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = "0.3"
tokio-stream = "0.1"
uuid = "1.0"
